--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon ./bin/www"
+    "start:dev": "nodemon ./bin/www",
+    "start": "node ./bin/www"
   },
   "keywords": [],
   "author": "Andrei Pavalachi <andreipatan@live.com>",
