--- a/camagru-app/package.json
+++ b/camagru-app/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
