--- a/camagru-app/package.json
+++ b/camagru-app/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2"
   },
