--- a/camagru-app/Dockerfile
+++ b/camagru-app/Dockerfile
@@ -1,7 +1,16 @@
-FROM node:14
+FROM node:16 as base
 
 WORKDIR /Camagru
 COPY package.json .
-RUN npm install
+
+FROM base as dev
+RUN npm install --development
+RUN npm run compile
 COPY . .
-CMD npm start
+CMD ["node", "./dist/bin/www"]
+
+FROM base as prod
+RUN npm install --production
+RUN npm run compile
+COPY . .
+CMD ["node", "./dist/bin/www"]
