--- a/camagru-app/package.json
+++ b/camagru-app/package.json
@@ -4,28 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile:ts": "tsc",
+    "copy": "cp -r ./src/public ./dist/ && cp -r ./src/bin ./dist",
+    "compile": "npm run compile:ts && npm run copy",
     "start:dev": "nodemon ./bin/www",
-    "start": "node ./bin/www",
-    "migrate": "node ./migrations/index.js",
-    "seed": "node ./seeds/index.js"
+    "start": "node ./dist/bin/www",
+    "migrate": "node ./dist/migrations/index.js",
+    "seed": "node ./dist/seeds/index.js"
   },
   "keywords": [],
   "author": "Andrei Pavalachi <andreipatan@live.com>",
   "license": "ISC",
   "dependencies": {
+    "@fakerjs/faker": "^3.0.0",
     "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/faker": "^6.6.9",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "typescript": "^4.6.3"
   }
 }
