--- a/src/server/Camagru/appsettings.json
+++ b/src/server/Camagru/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=Camagru;Trusted_Connection=False;Integrated Security=True;Encrypt=False"
+  }
 }
