--- a/src/server/Data/Migrator/appsettings.json
+++ b/src/server/Data/Migrator/appsettings.json
@@ -5,5 +5,8 @@
             "System": "Information",
             "Microsoft": "Information"
         }
+    },
+    "ConnectionStrings": {
+        "Default": "Server=localhost;Database=Camagru;Trusted_Connection=False;Integrated Security=True;Encrypt=False"
     }
 }
