Added authorization and authentication

--- a/src/server/Camagru/appsettings.json
+++ b/src/server/Camagru/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=localhost;Database=Camagru;Trusted_Connection=False;Integrated Security=True;Encrypt=False"
+  },
+  "Jwt": {
+    "Issuer": "https://localhost:7208",
+    "Audience": "https://localhost:7208",
+    "Key": "abcdefgh12345678",
+    "Expiration": 2
   }
 }
