--- a/src/server/Camagru.Application/Camagru.Application.csproj
+++ b/src/server/Camagru.Application/Camagru.Application.csproj
@@ -7,10 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MediatR" Version="12.1.1" />
+      <PackageReference Include="FluentValidation" Version="11.6.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     </ItemGroup>
-
-
 </Project>
